# kxnr.github.io

./: .env  .gitignore  .gitmodules  CNAME  Justfile  README.md  about_me.html  about_me.html.pm  app.py  background_image.py  cli.py  components.py  datastore.py  forms.py  index.html  index.html.pm  kxnr.html  launch.sh  models.py  package-lock.json  package.json  pages.py  pollen.rkt  pyproject.toml  resume.html  resume.html.pm  tailwind.config.js  test.db  utils.py
articles/: test_article.html.pm  test_article.preview
compiled/pollen/: index.html.pm.rktd  index.html.pp.rktd  index.html.rktd  kxnr.html.rktd
css/: output.css  resume.css
docs/: CNAME  about_me.html  index.html  resume.html
docs/articles/: test_article.html
docs/css/: output.css  resume.css
docs/templates/: resume.html  template.html
src/: about_me.html  about_me.html.pm  app.py  cli.py  components.py  datastore.py  index.html  index.html.pm  layouts.py  models.py  pollen.rkt  resume.html  resume.html.pm
src/articles/: test_article.html
src/css/: resume.css  resume_source.css  source.css  tailwind.config.js
src/templates/: article.html.p  resume.html  template.html  template.html.p
static/css/: custom.css
static/js/: background.js  navbar.js  noise.js  pdf.js
templates/: resume.html.p  template.html.p
templates/components/: article.html  base.html  component_macros.html  error.html  footer.html  full_header.html  list.html  mini_header.html  navbar.html  panels.html  pdf.html
templates/layouts/: feature.html  home.html
templates/pages/: feature.html  gallery.html  home.html
(+17 files in other folders)
